unpackaged/main/default/objects/bt_stripe__Location__c/bt_stripe__Location__c.object-meta.xml
<CustomObject>
    <description>A Location record can be an office, employee address, or other location type. This allows you to create multiple Locations related to a Company Info record.</description>
    <label>Location</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>