unpackaged/main/default/objects/bt_stripe__Location__c/fields/bt_stripe__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Postal_Code__c</fullName>
    <description>The Location&#39;s postal code.</description>
    <inlineHelpText>The Location&#39;s postal code.</inlineHelpText>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>