unpackaged/main/default/objects/bt_stripe__Location__c/fields/bt_stripe__Street_1__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Street_1__c</fullName>
    <description>The first street line of this Location.</description>
    <inlineHelpText>The first street line of this Location.</inlineHelpText>
    <label>Street 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>