unpackaged/main/default/objects/bt_stripe__Location__c/fields/bt_stripe__Street_2__c.field-meta.xml
<CustomField>
    <fullName>bt_stripe__Street_2__c</fullName>
    <description>The second street line of this Location.</description>
    <inlineHelpText>The second street line of this Location.</inlineHelpText>
    <label>Street 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>